Fixes white line to the left of scrollbar

--- a/snowflake classic black.css
+++ b/snowflake classic black.css
@@ -455,4 +455,9 @@
     .js-column-social-proof.column-detail-level-2.column-panel {
        display: none;        
     }
+    
+    /* Fixes the scrollbar issue in user modal where it shows a white line.*/
+    .scroll-styled-v::-webkit-scrollbar-track, .scroll-styled-h::-webkit-scrollbar-track {
+       border-left: none;
+    }
 }
